--- a/.gitignore
+++ b/.gitignore
@@ -328,5 +328,8 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
+
+# Project
 .vscode/
 .pytest_cache/
+.cache/
